--- a/.minecraft/config/smoothswapping.json
+++ b/.minecraft/config/smoothswapping.json
@@ -1,5 +1,10 @@
 {
   "toggle_mod": true,
-  "animation_speed": 100,
-  "curve_points": []
+  "animation_speed": 400,
+  "curve_points": [
+    [
+      0.115625,
+      1.0144722
+    ]
+  ]
 }
