--- a/.minecraft/config/fabric/indigo-renderer.properties
+++ b/.minecraft/config/fabric/indigo-renderer.properties
@@ -1,5 +1,5 @@
 #Indigo properties file
-#Thu Aug 03 02:02:50 MST 2023
+#Thu Aug 03 05:18:08 EDT 2023
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
 ambient-occlusion-mode=hybrid
