--- a/.minecraft/config/lambdynlights.toml
+++ b/.minecraft/config/lambdynlights.toml
@@ -76,4 +76,5 @@ mode = "fancy"
 				swallow_tail_butterfly = true
 				grayling_butterfly = true
 				red_applefly_butterfly = true
+				aponi_butterfly = true
 
