--- a/instance.cfg
+++ b/instance.cfg
@@ -1,3 +1,4 @@
+AutoCloseConsole=false
 CloseAfterLaunch=false
 EnableFeralGamemode=false
 EnableMangoHud=false
@@ -5,12 +6,15 @@ ForgeVersion=
 IgnoreJavaCompatibility=false
 InstanceType=OneSix
 IntendedVersion=
-JoinServerOnLaunch=true
+JavaArchitecture=64
+JavaPath=C:/Program Files/Java/jdk-17.0.1/bin/javaw.exe
+JavaTimestamp=1638338300927
+JavaVersion=17.0.1
+JoinServerOnLaunch=false
 JoinServerOnLaunchAddress=
-JoinSingleplayerWorldOnLaunch=false
-JoinWorldOnLaunch=false
-JvmArgs=-XX:+UnlockExperimentalVMOptions -XX:-OmitStackTraceInFastThrow -XX:+IgnoreUnrecognizedVMOptions  -XX:+UseNewLongLShift -XX:+UseVectorCmov -XX:+UseXmmI2D -XX:+UseXmmI2F  -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:-UseG1GC -XX:+UseZGC -XX:+ZUncommit -XX:ZUncommitDelay=30 -XX:ZAllocationSpikeTolerance=2.0 -XX:+ParallelRefProcEnabled -XX:SoftMaxHeapSize=8g -XX:+ZProactive -XX:ConcGCThreads=8  -XX:+AlwaysPreTouch -XX:+UseTransparentHugePages -XX:LargePageSizeInBytes=2M -XX:+UseLargePages 
+JvmArgs=-XX:+UnlockExperimentalVMOptions -XX:-OmitStackTraceInFastThrow -XX:+IgnoreUnrecognizedVMOptions  -XX:+UseNewLongLShift -XX:+UseVectorCmov -XX:+UseXmmI2D -XX:+UseXmmI2F  -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:-UseG1GC -XX:+UseZGC -XX:+ZUncommit -XX:ZUncommitDelay=30 -XX:ZAllocationSpikeTolerance=2.0 -XX:+ParallelRefProcEnabled -XX:SoftMaxHeapSize=8g -XX:+ZProactive -XX:ConcGCThreads=8  -XX:+AlwaysPreTouch -XX:+UseTransparentHugePages -XX:LargePageSizeInBytes=2M -XX:+UseLargePages
 LWJGLVersion=
+LaunchMaximized=false
 LiteloaderVersion=
 LogPrePostOutput=true
 MCLaunchMethod=LauncherPart
@@ -22,13 +26,16 @@ ManagedPackVersionID=
 ManagedPackVersionName=
 MaxMemAlloc=32000
 MinMemAlloc=128
+MinecraftWinHeight=480
+MinecraftWinWidth=854
 OverrideAccount=false
 OverrideAccountProfileId=
 OverrideCommands=false
 OverrideConsole=false
 OverrideGameTime=false
+OverrideJava=false
 OverrideJavaArgs=true
-OverrideJavaLocation=false
+OverrideJavaLocation=true
 OverrideMCLaunchMethod=false
 OverrideMemory=true
 OverrideMiscellaneous=false
@@ -36,11 +43,20 @@ OverrideNativeWorkarounds=false
 OverridePerformance=false
 OverrideWindow=false
 PermGen=128
+PostExitCommand=
+PreLaunchCommand=
 QuitAfterGameStop=false
+RecordGameTime=true
+ShowConsole=false
+ShowConsoleOnError=true
+ShowGameTime=true
 UseDiscreteGpu=false
+UseNativeGLFW=false
+UseNativeOpenAL=false
+WrapperCommand=
 iconKey=modrinth
-lastLaunchTime=1691053558603
-lastTimePlayed=6
+lastLaunchTime=1691054080189
+lastTimePlayed=38
 name=Colonization Pack 1.19.2
 notes=
-totalTimePlayed=3166
+totalTimePlayed=5930
