--- a/.minecraft/config/indium-renderer.properties
+++ b/.minecraft/config/indium-renderer.properties
@@ -1,5 +1,5 @@
 #Indium properties file
-#Thu Aug 03 02:02:53 MST 2023
+#Thu Aug 03 05:18:11 EDT 2023
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
 ambient-occlusion-mode=auto
